part-1/ex_1.11/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: ping-pong-claim
      containers:
        - name: ping-pong
          image: tryfonm/ping-pong:v1.11
          volumeMounts:
            - name: shared-volume
              mountPath: /usr/src/app/files

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: ping-pong-claim
      containers:
        - name: log-output
          image: tryfonm/log-output:v1.11
          volumeMounts:
            - name: shared-volume
              mountPath: /usr/src/app/files
